kubernetes/taskboard/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-03-25T17:45:11Z"
  generation: 1
  labels:
    run: taskboard
  name: taskboard
  
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  minReadySeconds: 10
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: taskboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: taskboard
    spec:
      containers:
      - image: repo:5000/objective-taskboard:snapshot-master
        imagePullPolicy: Always
        name: taskboard
        ports:
        - containerPort: 8082
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
              - mountPath: /opt/taskboard_properties
                name: properties
              - mountPath: /opt/taskboard_config
                name: data-config
        readinessProbe:
          httpGet:
            path: /login
            port: 8082
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
        - name: properties
          configMap:
            name: config-files
        - name: data-config
          persistentVolumeClaim:
            claimName: data-config-claim
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: taskboard-svc
  labels:
    run: taskboard
spec:
  type: NodePort
  selector:
    run: taskboard
  ports:
  - name: http
    port: 80
    targetPort: 8082
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
---
