kubernetes/taskboard/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: taskboard-liferay-dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - taskboard-liferay-dev.objective.com.br
    secretName: taskboard-liferay-dev-tls
  rules:
  - host: taskboard-liferay-dev.objective.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: taskboard-svc
          servicePort: 8082
